# NR-Particle-Editor

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  emitter.json  format-linux.sh  format-windows.ps1
src/: App.cpp  App.hpp  Constants.hpp  InputHandler.cpp  InputHandler.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  PropertiesFile.cpp  PropertiesFile.hpp  RNG.cpp  RNG.hpp  Types.hpp  Utils.hpp  main.cpp
